--- a/index.css
+++ b/index.css
@@ -2,6 +2,11 @@
 
 /* ##### Variables ##### */
 
+* {
+    box-sizing: border-box;
+    overflow-x: hidden
+}
+
 /* ##### Typography ##### */
 
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap'); /* 'Dongle' */
@@ -42,7 +47,7 @@ main h1 {
 }
 
 main p {
-    font-size: clamp(1.5rem, 2.5vw, 3.5vw);
+    font-size: clamp(1.3rem, 2vw, 3vw);
 }
 
 main button {
