--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 * { box-sizing: border-box; }
 
-body { overflow-x: hidden }
+body { overflow-x: hidden; }
 
 /* ##### Typography ##### */
 
@@ -54,6 +54,29 @@ main button {
     font-size: 1.2rem;
 }
 
+.photo-gallery h2 {
+    font-size: 3rem;
+}
+
+.gallery-container div p {
+    font-size: 1.1vw;
+    text-align: center;
+}
+
+.quote p {
+    font-size: 1.4rem;
+    font-style: italic;
+    text-align: justify;
+}
+
+.quote .quote-author {
+    font-size: 1.5rem;
+    font-style: normal;
+    font-weight: 600;
+    text-align: right; 
+    padding-right: 2vw;
+}
+
 /* ##### Layout ##### */
 
 body {
@@ -81,19 +104,58 @@ main {
     display: flex;
     flex-flow: column nowrap;
     margin: auto;
-    height: 25vw;
+    height: auto;
 }
 
 .main-overlay {
     padding: 3vw 5vw;
-    height: 25vw;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 }
 
 main img {
-    height: 25vw;
-    width: 100vw;
+    height: 50vw;
+    width: 100%;
     object-fit: cover;
     position: absolute;
     z-index: -1;
+}
+
+.photo-gallery {
+    background-color: grey;
+    padding: 1vw 5vw 3vw 5vw ;
+    text-align: center;
+}
+
+.gallery-container {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    padding: 3vw;
+    gap: 3vw;
+}
+
+.gallery-container div {
+    width: 18vw;
+    height: 25vw;
+    background-color: grey;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    padding: 2vw;
+    gap: 1vw;
+}
+
+.gallery-container div img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.quote {
+    margin: auto;
+    padding: 5vw 5vw;
 }
