--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@ main button {
 }
 
 .gallery-container div p {
-    font-size: 1.1vw;
+    font-size: 1.05rem;
     text-align: center;
 }
 
@@ -75,6 +75,24 @@ main button {
     font-weight: 600;
     text-align: right; 
     padding-right: 2vw;
+}
+
+.call h3 { 
+    font-size: 1.5rem;
+}
+
+.call p {
+    font-size: 1.1rem;
+}
+
+.call button {
+    font-size: 1.2rem;
+}
+
+footer a, p {
+    text-decoration: none;
+    color: black;
+    font-size: 1.3rem;
 }
 
 /* ##### Layout ##### */
@@ -135,27 +153,52 @@ main img {
     background-color: white;
     padding: 3vw;
     gap: 3vw;
+    background-color: lightgrey;
 }
 
 .gallery-container div {
     width: 18vw;
-    height: 25vw;
+    height: fit-content;
     background-color: grey;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 2vw;
-    gap: 1vw;
 }
 
 .gallery-container div img {
-    width: 100%;
-    height: 100%;
+    width: 15vw;
+    height: 15vw;
     object-fit: cover;
 }
 
 .quote {
     margin: auto;
     padding: 5vw 5vw;
+    background-color: lightgrey;
 }
+
+.call {
+    background-color: grey;
+    padding: 3vw 5vw;
+    display: flex;
+    justify-content: center;
+}
+
+.call-container {
+    background-color: lightgrey;
+    width: 80%;
+    padding: 1vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+footer {
+    background-color: lightgrey;
+    padding: .1vw 5vw;
+    text-align: center;
+}
+
+/* ##### END ##### */
