--- a/index.css
+++ b/index.css
@@ -104,7 +104,7 @@ body {
 header {
     display: flex;
     display: row nowrap;
-    padding: 2.5vw 5vw;
+    padding: 2.5vw 7vw;
     margin: auto;
     justify-content: space-between;
     align-items: center;
@@ -126,7 +126,7 @@ main {
 }
 
 .main-overlay {
-    padding: 3vw 5vw;
+    padding: 3vw 7vw;
     height: 100%;
     width: 100%;
 }
@@ -141,7 +141,7 @@ main img {
 
 .photo-gallery {
     background-color: grey;
-    padding: 1vw 5vw 3vw 5vw ;
+    padding: 1vw 7vw 3vw 7vw ;
     text-align: center;
 }
 
@@ -151,14 +151,14 @@ main img {
     justify-content: space-evenly;
     align-items: center;
     background-color: white;
-    padding: 3vw;
-    gap: 3vw;
+    padding: 2vw;
+    gap: 2vw;
     background-color: lightgrey;
 }
 
 .gallery-container div {
     width: 18vw;
-    height: fit-content;
+    height: 27vw;
     background-color: grey;
     display: flex;
     flex-flow: column nowrap;
@@ -175,13 +175,13 @@ main img {
 
 .quote {
     margin: auto;
-    padding: 5vw 5vw;
+    padding: 5vw 7vw;
     background-color: lightgrey;
 }
 
 .call {
     background-color: grey;
-    padding: 3vw 5vw;
+    padding: 3vw 7vw;
     display: flex;
     justify-content: center;
 }
@@ -197,7 +197,7 @@ main img {
 
 footer {
     background-color: lightgrey;
-    padding: .1vw 5vw;
+    padding: .1vw 7vw;
     text-align: center;
 }
 
