--- a/index.css
+++ b/index.css
@@ -6,6 +6,13 @@
 
 body { overflow-x: hidden; }
 
+:root {
+    --sd: #0c333a;
+    --bg: #157070;
+    --hl: #42b39b;
+    --tx: #8cf8b7;
+}
+
 /* ##### Typography ##### */
 
 @import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&display=swap'); /* 'Dongle' */
@@ -37,7 +44,6 @@ header h2 {
 
 header a {
     text-decoration: none;
-    color: black;
     font-size: 1.15rem;
 }
 
@@ -91,8 +97,47 @@ main button {
 
 footer a, p {
     text-decoration: none;
-    color: black;
     font-size: 1.3rem;
+}
+
+/* ##### Colors ##### */
+
+header,
+.photo-gallery,
+.call,
+.gallery-container>div,
+button {
+    background-color: var(--bg);
+}
+
+.gallery-container,
+footer,
+.call-container {
+    background-color: var(--hl); 
+}
+
+p, 
+a, 
+li, 
+button, 
+h1, 
+h2, 
+h3 {
+    color: var(--tx);
+    text-shadow: var(--sd) 2px 2px 2px;
+}
+
+.call-container p,
+.call-container h3,
+footer p,
+footer a {
+    color: var(--sd);
+    text-shadow: none;
+    font-weight: 600;
+}
+
+.main-overlay, .quote>div {
+    background-color: rgba(12, 51, 58, .45);
 }
 
 /* ##### Layout ##### */
@@ -108,8 +153,8 @@ header {
     margin: auto;
     justify-content: space-between;
     align-items: center;
-    background-color: grey;
     height: 3rem;
+    border-bottom: 3px solid var(--sd);
 }
 
 .link-list {
@@ -140,9 +185,10 @@ main img {
 }
 
 .photo-gallery {
-    background-color: grey;
     padding: 1vw 7vw 3vw 7vw ;
     text-align: center;
+    border-top: 3px solid var(--sd);
+    border-bottom: 3px solid var(--sd);
 }
 
 .gallery-container {
@@ -150,55 +196,79 @@ main img {
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
-    background-color: white;
     padding: 2vw;
     gap: 2vw;
-    background-color: lightgrey;
+    border-radius: 20px;
+    border: 3px solid var(--sd);
 }
 
 .gallery-container div {
     width: 18vw;
     height: 27vw;
-    background-color: grey;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
     justify-content: space-between;
     padding: 2vw;
+    border-radius: 20px;
+    border: 3px solid var(--sd);
 }
 
 .gallery-container div img {
     width: 15vw;
     height: 15vw;
     object-fit: cover;
+    border-radius: 20px;
 }
 
 .quote {
     margin: auto;
+    height: 25vw;
+}
+
+.quote div {
+    height: 25vw;
+    width: 100%;
+    position: absolute;
     padding: 5vw 7vw;
-    background-color: lightgrey;
+}
+
+.quote img {
+    width: 100%;
+    height: 25vw;
+    object-fit: cover;
+    z-index: -2;
 }
 
 .call {
-    background-color: grey;
     padding: 3vw 7vw;
     display: flex;
     justify-content: center;
+    border-top: 3px solid var(--sd);
+    border-bottom: 3px solid var(--sd);
 }
 
 .call-container {
-    background-color: lightgrey;
     width: 80%;
     padding: 1vw;
     display: flex;
     align-items: center;
     justify-content: space-around;
+    border-radius: 20px;
+    border: 3px solid var(--sd);
 }
 
 footer {
-    background-color: lightgrey;
     padding: .1vw 7vw;
     text-align: center;
 }
+
+button {
+    border: 1.5px solid var(--sd);
+    border-radius: 10px;
+    padding: .5vw 1vw;
+}
+
+/* ##### Animations ##### */
 
 /* ##### END ##### */
