--- a/index.css
+++ b/index.css
@@ -247,10 +247,11 @@ main img {
 
 .call-container {
     width: 80%;
-    padding: 1vw;
+    padding: .5vw 5vw;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 2vw;
     border-radius: 20px;
     border: 3px solid var(--sd);
 }
