--- a/index.css
+++ b/index.css
@@ -152,6 +152,7 @@ header {
     align-items: center;
     height: 3rem;
     border-bottom: 3px solid var(--sd);
+    box-shadow: 0px 5px 20px var(--sd);
 }
 
 .link-list {
@@ -173,12 +174,12 @@ main {
     width: 100%;
 }
 
-main img {
+main .img {
     height: 50vw;
     width: 100%;
-    object-fit: cover;
     position: absolute;
     z-index: -1;
+    background: no-repeat center fixed url(pictures/ocean.jpg);
 }
 
 .photo-gallery {
@@ -186,6 +187,7 @@ main img {
     text-align: center;
     border-top: 3px solid var(--sd);
     border-bottom: 3px solid var(--sd);
+    box-shadow: 0px 5px 20px var(--sd), 0px -5px 20px var(--sd);
 }
 
 .gallery-container {
@@ -197,6 +199,7 @@ main img {
     gap: 2vw;
     border-radius: 20px;
     border: 3px solid var(--sd);
+    box-shadow: 5px 5px 20px var(--sd);
 }
 
 .gallery-container div {
@@ -209,6 +212,7 @@ main img {
     padding: 2vw;
     border-radius: 20px;
     border: 3px solid var(--sd);
+    box-shadow: 0px 0px 10px var(--sd);
 }
 
 .gallery-container div img {
@@ -230,11 +234,11 @@ main img {
     padding: 5vw 7vw;
 }
 
-.quote img {
+.quote .img {
     width: 100%;
     height: 25vw;
-    object-fit: cover;
-    z-index: -2;
+    background: no-repeat left fixed url(pictures/turtle.jpg);
+    z-index: -1;
 }
 
 .call {
@@ -243,6 +247,7 @@ main img {
     justify-content: center;
     border-top: 3px solid var(--sd);
     border-bottom: 3px solid var(--sd);
+    box-shadow: 0px -5px 20px var(--sd);
 }
 
 .call-container {
@@ -254,6 +259,7 @@ main img {
     gap: 2vw;
     border-radius: 20px;
     border: 3px solid var(--sd);
+    box-shadow: 5px 5px 20px var(--sd);
 }
 
 footer {
@@ -264,7 +270,7 @@ footer {
 button {
     border: 1.5px solid var(--sd);
     border-radius: 10px;
-    padding: .5vw 1vw;
+    padding: 1vw 2vw;
 }
 
 /* ##### Animations ##### */
