--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 
 * { box-sizing: border-box; }
 
-body { overflow-x: hidden; }
+body { overflow-x: hidden;}
 
 :root {
     --sd: #0c333a;
@@ -165,17 +165,21 @@ main {
     display: flex;
     flex-flow: column nowrap;
     margin: auto;
-    height: auto;
+    height: 30vw;
 }
 
 .main-overlay {
-    padding: 3vw 7vw;
+    padding: 2vw 7vw 5vw 7vw;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
     height: 100%;
     width: 100%;
 }
 
 main .img {
-    height: 50vw;
+    height: 30vw;
     width: 100%;
     position: absolute;
     z-index: -1;
@@ -183,8 +187,13 @@ main .img {
 }
 
 .photo-gallery {
-    padding: 1vw 7vw 3vw 7vw ;
+    padding: 0vw 7vw 5vw 7vw ;
     text-align: center;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-between;
+    height: auto;
     border-top: 3px solid var(--sd);
     border-bottom: 3px solid var(--sd);
     box-shadow: 0px 5px 20px var(--sd), 0px -5px 20px var(--sd);
@@ -195,6 +204,7 @@ main .img {
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
+    height: 30vw;
     padding: 2vw;
     gap: 2vw;
     border-radius: 20px;
@@ -204,7 +214,7 @@ main .img {
 
 .gallery-container div {
     width: 18vw;
-    height: 27vw;
+    height: 26vw;
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -224,27 +234,32 @@ main .img {
 
 .quote {
     margin: auto;
-    height: 25vw;
+    height: 30vw;
 }
 
 .quote div {
-    height: 25vw;
+    height: 30vw;
     width: 100%;
     position: absolute;
     padding: 5vw 7vw;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
 }
 
 .quote .img {
     width: 100%;
-    height: 25vw;
+    height: 30vw;
     background: no-repeat left fixed url(pictures/turtle.jpg);
     z-index: -1;
 }
 
 .call {
     padding: 3vw 7vw;
+    height: 25vw;
     display: flex;
     justify-content: center;
+    align-items: center;
     border-top: 3px solid var(--sd);
     border-bottom: 3px solid var(--sd);
     box-shadow: 0px -5px 20px var(--sd);
@@ -252,6 +267,7 @@ main .img {
 
 .call-container {
     width: 80%;
+    height: 70%;
     padding: .5vw 5vw;
     display: flex;
     align-items: center;
@@ -274,5 +290,13 @@ button {
 }
 
 /* ##### Animations ##### */
+
+/* ##### Header #####*/
+
+header h2 {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: .09vw;
+}
 
 /* ##### END ##### */
