Add clamps to cards, fix typo

--- a/index.css
+++ b/index.css
@@ -204,7 +204,7 @@ main .img {
     flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
-    height: 30vw;
+    height: max-content;
     padding: 2vw;
     gap: 2vw;
     border-radius: 20px;
@@ -213,8 +213,8 @@ main .img {
 }
 
 .gallery-container div {
-    width: 18vw;
-    height: 26vw;
+    width: clamp(250px, 18.5vw, 18.5vw);
+    height: clamp(300px, 26vw, 26vw);
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
@@ -226,8 +226,8 @@ main .img {
 }
 
 .gallery-container div img {
-    width: 15vw;
-    height: 15vw;
+    width: 100%;
+    height: clamp(150px, 15vw, 15vw);
     object-fit: cover;
     border-radius: 20px;
 }
