--- a/index.css
+++ b/index.css
@@ -200,7 +200,7 @@ main .img {
 }
 
 .photo-gallery {
-    padding: 0vw 7vw 5vw 7vw ;
+    padding: 0vw 7vw 5vw 7vw;
     text-align: center;
     display: flex;
     flex-flow: column;
@@ -430,8 +430,8 @@ div.gallery-item>p {
     background-color:hsla(189, 6%, 1%, .7);
     padding: 4vw 2vw 0vw 2vw;
     text-align: center;
-    border: 3px solid var(--tx) ;
-    text-shadow: 0px 0px 3px var(--tx) ;
+    border: 3px solid var(--tx);
+    text-shadow: 0px 0px 3px var(--tx);
 }
 
 div.gallery-item {
@@ -461,27 +461,60 @@ div.gallery-item:hover > p {
 
 /* ##### Normal Monitors ##### */
 
-@media screen and (min-width: 1550px) {
+@media screen and (min-width: 1551px) {
 
-header { padding: 2vw 5vw; }
-header h2 div { font-size: 2.5vw; }
-header a { font-size: 1.3vw;}
+header {padding: 2vw 5vw;}
+header h2 div { font-size: 2.5vw;}
+header a {font-size: 1.3vw;}
 header li::before { margin: 1.55vw 0px 0px 0.5px; height: .15vw;}
 
-main.main { height: 25vw;}
+main.main {height: 25vw;}
 
-section.photo-gallery div.gallery-item p { font-size: 1.35rem;}
+section.photo-gallery div.gallery-item p {font-size: 1.35rem;}
 
-section.quote { height: 20vw; }
-section.quote div.quote-overlay { height: 20vw; }
+section.quote {height: 20vw;}
+section.quote div.quote-overlay {height: 20vw;}
 
-section.call { padding: 0vw 5vw; height: 20vw;}
-section.call div.call-container { height: 50%;}
+section.call {padding: 0vw 5vw; height: 20vw;}
+section.call div.call-container {height: 50%;}
 
-footer.footer { padding: 0.1vw 5vw;}
+footer.footer {padding: 0.1vw 5vw;}
 
-button { border: var(--sd) .15vw solid; }
-button:hover { border: solid .15vw var(--tx); }
+button {border: var(--sd) .15vw solid;}
+button:hover {border: solid .15vw var(--tx);}
+
+}
+
+/*###### Landscape Tablet ##### */
+
+@media screen and (max-width: 1112px) {
+
+header {padding: 3vw 10vw;}
+header h2 div {font-size: 3vw;}
+header a {font-size: 2.5vw;}
+header li::before {margin: 3vw 0px 0px 0.5px; height: .3vw;}
+
+header ul li, header ul li a {transition: all .01s ease-out;}
+header ul li:active, header ul li a:active 
+{transform: scale(1.1) translateY(-1.5px);}
+
+main.main {height: 50vw;}
+main.main div.main-overlay {height: 100%;} 
+main.main div.img {height: 50vw;}
+
+section.photo-gallery {padding: 0vw 10vw 3vw 10vw;}
+div.gallery-item p{
+    opacity: 1; z-index: 1; 
+    border: 3px solid var(--sd); background-color: var(--hl); 
+    color: var(--sd); position: relative;
+    text-shadow: none; font-weight: 600; 
+    width: 40%;}
+div.gallery-item img{ width: 58%; height: 100%; border: 3px solid var(--sd);}
+div.gallery-item{
+    width: 100%; height: 35vw; 
+    display: flex; flex-flow: row nowrap; 
+    padding: 1vw 1vw; justify-content: space-between;}
+
 
 }
 /* ##### END ##### */ 
