--- a/index.css
+++ b/index.css
@@ -498,21 +498,42 @@ header ul li, header ul li a {transition: all .01s ease-out;}
 header ul li:active, header ul li a:active 
 {transform: scale(1.1) translateY(-1.5px);}
 
-main.main {height: 50vw;}
+main.main {height: 40vw;}
 main.main div.main-overlay {height: 100%;} 
-main.main div.img {height: 50vw;}
+main.main div.img {height: 40vw;}
 
 section.photo-gallery {padding: 0vw 10vw 3vw 10vw;}
-div.gallery-item p{
-    opacity: 1; z-index: 1; 
-    border: 3px solid var(--sd); background-color: var(--hl); 
-    color: var(--sd); position: relative;
-    text-shadow: none; font-weight: 600; 
-    width: 40%;}
-div.gallery-item img{ width: 58%; height: 100%; border: 3px solid var(--sd);}
-div.gallery-item{
-    width: 100%; height: 35vw; 
-    display: flex; flex-flow: row nowrap; 
-    padding: 1vw 1vw; justify-content: space-between;}
-}
+div.gallery-item p {
+    opacity: 1; 
+    z-index: 1; 
+    border: 3px solid var(--sd); 
+    background-color: var(--hl); 
+    color: var(--sd); 
+    position: relative;
+    text-shadow: none; 
+    font-weight: 600;
+    width: 40%; 
+    height: 50%;
+    text-align: left; 
+    padding: 5vw 3vw 0vw 3vw;}
+div.gallery-item img { width: 58%; height: 100%; border: 3px solid var(--sd);}
+div.gallery-item {
+    width: 100%; 
+    height: 35vw; 
+    display: flex; 
+    flex-flow: row nowrap; 
+    padding: 1vw 1vw; 
+    justify-content: space-between;}
+
+section.quote {height: 40vw;}
+section.quote div.quote-overlay {height: 40vw; padding: 5vw 10vw;}
+section.quote div.img {height: 40vw;}
+
+section.call {padding: 0vw 10vw; height: 25vw;}
+section.call div.call-container { 
+    height: 67%; 
+    width: 100%; 
+    padding: 0vw 10vw 0vw 6vw;}
+section.call div.call-container p {width: 80%;}
+
 /* ##### END ##### */ 
