--- a/index.css
+++ b/index.css
@@ -459,8 +459,6 @@ div.gallery-item:hover > p {
 
 /* ##### RESPONSIVENESS ##### */
 
-/* ##### Normal Monitors ##### */
-
 @media screen and (min-width: 1551px) {
 
 header {padding: 2vw 5vw;}
@@ -482,10 +480,31 @@ footer.footer {padding: 0.1vw 5vw;}
 
 button {border: var(--sd) .15vw solid;}
 button:hover {border: solid .15vw var(--tx);}
-
 }
 
-/*###### Landscape Tablet ##### */
+@media screen and (max-width: 1323px) {
+div.gallery-item p {
+    opacity: 1; 
+    z-index: 1; 
+    border: 3px solid var(--sd);         
+    background-color: var(--hl); 
+    color: var(--sd); 
+    position: relative;
+    text-shadow: none; 
+    font-weight: 600;
+    width: 40%; 
+    height: 50%;
+    text-align: left; 
+    padding: 3vw 3vw 0vw 3vw;}
+div.gallery-item {
+    width: 100%; 
+    height: 20vw; 
+    display: flex; 
+    flex-flow: row nowrap; 
+    padding: 1vw 1vw; 
+    justify-content: space-between;}
+div.gallery-item img { width: 58%; height: 100%; border: 3px solid var(--sd);}
+}
 
 @media screen and (max-width: 1112px) {
 
@@ -499,7 +518,7 @@ header ul li:active, header ul li a:active
 {transform: scale(1.1) translateY(-1.5px);}
 
 main.main {height: 40vw;}
-main.main div.main-overlay {height: 100%;} 
+main.main div.main-overlay {height: 100%; padding: 0vw 10vw 5vw 10vw;} 
 main.main div.img {height: 40vw;}
 
 section.photo-gallery {padding: 0vw 10vw 3vw 10vw;}
@@ -536,4 +555,11 @@ section.call div.call-container {
     padding: 0vw 10vw 0vw 6vw;}
 section.call div.call-container p {width: 80%;}
 
+button.donate-button {height: 3rem; width: auto;}
+button.donate-button p {font-size: 1.5rem; text-align: center;}
+}
+
+@media screen and (max-width: 1112px) {
+
+}
 /* ##### END ##### */ 
